Development
	Remember pane position between audio only files
	Remove Media Change text and replace it with title in notification popup
	Add gnome-mplayer to the list of preferred applications
	Set background of gtk_socket to black, this plus a fix in gtk should fix flickering
		https://bugzilla.gnome.org/show_bug.cgi?id=598050
	Remember and restore panel position when playlist is visible on startup
	Remember softvol option patch by smoohta
	Updated Czech translation
	Fix problem with playlist detection on glib < 2.22
	Add Hungarian translation
	Add Preference in GUI to disable fullscreen control bar animation, looks crappy on intel+gtk 2.18
	Add GTK2.14 compile defs to gtk_widget_get_window
0.9.8
	Make some events from dbus (separate thread) be processed in the idle loop
	Prevent next item play when terminating
	Set tracker default values when playing a new item
	Don't tell firefox to reload plugins when running in plugin mode
	When closing preference dialog, set media start position to 0 when streaming
	Don't restart streaming media when closing preferences
	Fix problem with gnome-mplayer requesting the next item from gecko-mediaplayer, but
		gnome-mplayer is in retry mode, so two videos get played over each other
	Work around roundf compliation errors on non-Fedora Linux machines
	Prepare for GTK 2.18 Native Client windows, by using a patch from empathy
	Fix various problems found on mailing list
    Updated Polish translation
    Fix situation where mplayer thread being dead is detected in more places
    Fix problem with DVD video size being incorrect on media load
	Work on mute not being saved across items in playlist
    Updated pt_BR translation
    Add en_GB translation
    Version bump, debug message
    Fix prev and next when there are gaps in the playlist order values
    Delay loading the item to play, until everything is setup and flushed
    Don't autopause streaming media